# cat_dog_classifiers

./: README.md  pyproject.toml  requirements.txt
src/cat_dog_classifiers/: classifiers.py
tests/: test_classifiers.py
