[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "cat_dog_classifiers"
authors = [
  { name="Jonathan Edge", email="j.edge@zoho.com" },
]
description = "A simple package for creating a classifier to distinguish between cat and dog."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/jme45/cat_dog_classifiers"
Issues = "https://github.com/jme45/cat_dog_classifiers/issues"

[tool]

[tool.hatch.metadata]
# To allow dependencies which are only on github, but not pypi.
allow-direct-references = true

[tool.hatch.version]
path = "src/cat_dog_classifiers/__about__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]